--- a/project.config.json
+++ b/project.config.json
@@ -25,5 +25,6 @@
 	"compileType": "miniprogram",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"libVersion": "2.10.4",
 	"condition": {}
 }
