--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:h5": "taro build --type h5",
     "build:rn": "taro build --type rn",
     "build:qq": "taro build --type qq",
+    "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
@@ -24,58 +25,47 @@
     "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
+    "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch"
   },
+  "browserslist": [
+    "last 3 versions",
+    "Android >= 4.1",
+    "ios >= 8"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/components": "2.2.4",
-    "@tarojs/components-qa": "2.2.4",
-    "@tarojs/redux": "2.2.4",
-    "@tarojs/redux-h5": "2.2.4",
-    "@tarojs/router": "2.2.4",
-    "@tarojs/taro": "2.2.4",
-    "@tarojs/taro-alipay": "2.2.4",
-    "@tarojs/taro-h5": "2.2.4",
-    "@tarojs/taro-qq": "2.2.4",
-    "@tarojs/taro-quickapp": "2.2.4",
-    "@tarojs/taro-swan": "2.2.4",
-    "@tarojs/taro-tt": "2.2.4",
-    "@tarojs/taro-weapp": "2.2.4",
-    "babel-runtime": "^6.26.0",
-    "nerv-devtools": "^1.5.5",
-    "nervjs": "^1.5.5",
-    "qs": "^6.9.4",
+    "@babel/runtime": "^7.7.7",
+    "@tarojs/components": "3.1.1",
+    "@tarojs/react": "3.1.1",
+    "@tarojs/runtime": "3.1.1",
+    "@tarojs/taro": "3.1.1",
+    "miniprogram-api-promise": "^1.0.4",
+    "qs": "^6.9.6",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "0.11.1",
-    "taro-ui": "^2.3.4"
+    "taro-ui": "^3.0.0-alpha.10"
   },
   "devDependencies": {
-    "@tarojs/mini-runner": "2.2.4",
-    "@tarojs/webpack-runner": "2.2.4",
-    "@types/qs": "^6.9.3",
-    "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^5.16.0",
-    "eslint-config-taro": "2.2.4",
-    "eslint-plugin-import": "^2.12.0",
+    "@types/react": "^17.0.2",
+    "@tarojs/mini-runner": "3.1.1",
+    "@babel/core": "^7.8.0",
+    "@tarojs/webpack-runner": "3.1.1",
+    "babel-preset-taro": "3.1.1",
+    "eslint-config-taro": "3.1.1",
+    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-taro": "2.2.4",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "9.3.0",
-    "stylelint-config-taro-rn": "2.2.4",
-    "stylelint-taro-rn": "2.2.4",
-    "typescript": "^3.0.1"
+    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "typescript": "^4.1.0"
   }
 }
